0.15.1
------

* Fixed regression with ``stream`` parameter deprecation, requests.session() and cookie handling.
* Replaced adhoc URL parsing with `urllib.parse`.

0.15.0
------

* Added `responses.PassthroughResponse` and
  `reponses.BaseResponse.passthrough`. These features make building passthrough
  responses more compatible with dynamcially generated response objects.
* Removed the unused ``_is_redirect()`` function from responses internals.
* Added `responses.matchers.request_kwargs_matcher`. This matcher allows you
  to match additional request arguments like `stream`.
* Added `responses.matchers.multipart_matcher`. This matcher allows you
  to match request body and headers for ``multipart/form-data`` data
* Added `responses.matchers.query_string_matcher`. This matcher allows you
  to match request query string, similar to `responses.matchers.query_param_matcher`.
* Added `responses.matchers.header_matcher()`. This matcher allows you to match
  request headers. By default only headers supplied to `header_matcher()` are checked.
  You can make header matching exhaustive by passing `strict_match=True` to `header_matcher()`.
* Changed all matchers output message in case of mismatch. Now message is aligned
  between Python2 and Python3 versions
* Deprecate ``stream`` argument in ``Response`` and ``CallbackResponse``
* Added Python 3.10 support

0.14.0
------

* Added `responses.matchers`.
* Moved `responses.json_params_matcher` to `responses.matchers.json_params_matcher`
* Moved `responses.urlencoded_params_matcher` to
  `responses.matchers.urlencoded_params_matcher`
* Added `responses.matchers.query_param_matcher`. This matcher allows you
  to match query strings with a dictionary.
* Added `auto_calculate_content_length` option to `responses.add()`. When
  enabled, this option will generate a `Content-Length` header
  based on the number of bytes in the response body.

0.13.4
------

* Improve typing support