@@ -3,6 +3,7 @@
 
 * Fixed regression with ``stream`` parameter deprecation, requests.session() and cookie handling.
 * Replaced adhoc URL parsing with `urllib.parse`.
+* Added ``match`` parameter to ``add_callback`` method
 
 0.15.0
 ------
